SERVER-52977 ReshardingDonorService transition to kDonatingOplogEntries doesn't need to update coordinator doc